--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@
 *.tar.gz
 *.rar
 
+# Cucumber+
+src/test/resources/.cucumber+
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
